--- a/ML Exam 220940325081_ Que1.ipynb
+++ b/ML Exam 220940325081_ Que1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "442a98f6",
+   "id": "a56beb1f",
    "metadata": {},
    "source": [
     "# ML Module Exam\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dffc624d",
+   "id": "550f3b4a",
    "metadata": {},
    "source": [
     "## Problem Statement 1:\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "df16aee7",
+   "id": "b2eb5c6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5f8e116d",
+   "id": "0e45ba4e",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1897cfc8",
+   "id": "e24e30ba",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fdbe59aa",
+   "id": "fee5644a",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "974dcba2",
+   "id": "c7b5c822",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4cd39c75",
+   "id": "c6020aa1",
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0bd014c0",
+   "id": "f3208a86",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "67449ff5",
+   "id": "bc7cc5c7",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "616e4160",
+   "id": "6a79ff18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cb520639",
+   "id": "b13b4c43",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6f9b7a4a",
+   "id": "4c6a655e",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "168d55d5",
+   "id": "c8a7bd47",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd3d2f98",
+   "id": "824de9f2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -626,13 +626,13 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0a0c8f75",
+   "id": "190cddc3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x21d1407c850>"
+       "<seaborn.axisgrid.PairGrid at 0x1968591aee0>"
       ]
      },
      "execution_count": 13,
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b5a17ce7",
+   "id": "1311622f",
    "metadata": {},
    "outputs": [
     {
@@ -688,14 +688,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fee2f724",
+   "id": "28694f2b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3ac3bdb9",
+   "id": "00c998e4",
    "metadata": {},
    "source": [
     "# Categorical features"
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "eeaaa2a4",
+   "id": "467386d3",
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "07794235",
+   "id": "770004f3",
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a17467d7",
+   "id": "0b283a94",
    "metadata": {},
    "source": [
     "# Observation:\n",
@@ -879,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e612c962",
+   "id": "fa7554db",
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ac0ef6e7",
+   "id": "8d34ab4a",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfb07b81",
+   "id": "ad715235",
    "metadata": {},
    "source": [
     "# Observation\n",
@@ -945,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7eaffc67",
+   "id": "bb6b6a17",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "78c7364c",
+   "id": "53dd3818",
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "088fb802",
+   "id": "cb7d4eb8",
    "metadata": {},
    "source": [
     "# Observation: \n",
@@ -992,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb228d00",
+   "id": "bac84a97",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1000,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "cd23c86e",
+   "id": "9086609b",
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45db6e22",
+   "id": "8ce2332d",
    "metadata": {},
    "source": [
     "# Observation:\n",
@@ -1039,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d02b3ebb",
+   "id": "1595c4d5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1047,7 +1047,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2eba45dc",
+   "id": "6b2b5bf3",
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd54b90b",
+   "id": "1ee61e80",
    "metadata": {},
    "source": [
     "# Observation:\n",
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb1b147b",
+   "id": "7db3e438",
    "metadata": {},
    "source": [
     "# Numeric Features"
@@ -1095,8 +1095,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "86747dc2",
+   "execution_count": 22,
+   "id": "94737002",
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1208,7 @@
        "max    2018.000000      35.000000      92.600000  500000.000000    3.000000"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20cf76c6",
+   "id": "0c2b7618",
    "metadata": {},
    "source": [
     "## Observation\n",
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60031774",
+   "id": "faeee2c1",
    "metadata": {},
    "source": [
     "### Plotting  outliers using boxplot"
@@ -1237,8 +1237,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "0783fe8e",
+   "execution_count": 23,
+   "id": "38144235",
    "metadata": {},
    "outputs": [
     {
@@ -1269,8 +1269,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "f85ca753",
+   "execution_count": 24,
+   "id": "7e99ecd8",
    "metadata": {},
    "outputs": [
     {
@@ -1302,15 +1302,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99c551e4",
+   "id": "e7d20af2",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "f4bad0ec",
+   "execution_count": 25,
+   "id": "d42e48e5",
    "metadata": {},
    "outputs": [
     {
@@ -1341,8 +1341,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "cbcd53cb",
+   "execution_count": 26,
+   "id": "8202bd01",
    "metadata": {},
    "outputs": [
     {
@@ -1375,15 +1375,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d3bad62",
+   "id": "1c4ea876",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "eceb7a75",
+   "execution_count": 27,
+   "id": "b4f10e4f",
    "metadata": {},
    "outputs": [
     {
@@ -1407,14 +1407,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85d08649",
+   "id": "07eb4806",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7a269610",
+   "id": "1b30fd2a",
    "metadata": {},
    "source": [
     "# Model Building"
@@ -1422,8 +1422,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "e516bad3",
+   "execution_count": 28,
+   "id": "8942ca1f",
    "metadata": {},
    "outputs": [
     {
@@ -1539,7 +1539,7 @@
        "4      Dealer       Manual      0  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1550,8 +1550,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "b6b4c474",
+   "execution_count": 29,
+   "id": "1d57438f",
    "metadata": {},
    "outputs": [
     {
@@ -1583,8 +1583,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "428b958f",
+   "execution_count": 30,
+   "id": "35d54600",
    "metadata": {},
    "outputs": [
     {
@@ -1696,7 +1696,7 @@
        "max    2018.000000      35.000000      92.600000  500000.000000    3.000000"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1707,7 +1707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "004c5ff7",
+   "id": "3c658b55",
    "metadata": {},
    "source": [
     "\n"
@@ -1716,15 +1716,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39ad0284",
+   "id": "4140eb2c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "efc8199e",
+   "execution_count": 31,
+   "id": "14d48458",
    "metadata": {},
    "outputs": [
     {
@@ -1756,7 +1756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e27b0dd1",
+   "id": "ed411caf",
    "metadata": {},
    "source": [
     "- Now we can work with the model bulding"
@@ -1765,15 +1765,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94e7deff",
+   "id": "0a286ab5",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "36f69851",
+   "execution_count": 32,
+   "id": "75ca125a",
    "metadata": {},
    "outputs": [
     {
@@ -1992,7 +1992,7 @@
        "[5 rows x 110 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2006,8 +2006,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "d96af046",
+   "execution_count": 33,
+   "id": "d3d5b303",
    "metadata": {},
    "outputs": [
     {
@@ -2016,7 +2016,7 @@
        "(299, 110)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2027,8 +2027,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "ea5417ee",
+   "execution_count": 34,
+   "id": "9269896c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2040,8 +2040,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "e75e6902",
+   "execution_count": 35,
+   "id": "df0e4e61",
    "metadata": {},
    "outputs": [
     {
@@ -2260,7 +2260,7 @@
        "[5 rows x 109 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2271,8 +2271,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "6d99a4b9",
+   "execution_count": 36,
+   "id": "b2d35d00",
    "metadata": {},
    "outputs": [
     {
@@ -2286,7 +2286,7 @@
        "Name: Selling_Price, dtype: float64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2297,7 +2297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddfa452a",
+   "id": "25621585",
    "metadata": {},
    "source": [
     "- Splitting the variables "
@@ -2305,8 +2305,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "c42a54df",
+   "execution_count": 37,
+   "id": "611a1862",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2318,7 +2318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68d0b360",
+   "id": "1763802b",
    "metadata": {},
    "source": [
     "- Feature scaling using standard scaler"
@@ -2326,8 +2326,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "0d039e6b",
+   "execution_count": 38,
+   "id": "802591d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2341,7 +2341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c81df40d",
+   "id": "7b8248bd",
    "metadata": {},
    "source": [
     "- Applying Random Forest Regressor"
@@ -2349,8 +2349,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "632e15ad",
+   "execution_count": 39,
+   "id": "74e95af7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2361,8 +2361,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "24eed366",
+   "execution_count": 40,
+   "id": "a4764149",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2371,7 +2371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10e50ff7",
+   "id": "a0aaeee6",
    "metadata": {},
    "source": [
     "- Error Calculation"
@@ -2379,8 +2379,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "862ab9a0",
+   "execution_count": 41,
+   "id": "fceec95e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2389,14 +2389,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "c662e296",
+   "execution_count": 42,
+   "id": "8698e834",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0566653333333336"
+       "1.013870666666667"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Calculating absolute error for efficiency of model\n",
+    "\n",
+    "metrics.mean_absolute_error(y_test,y_pred) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "2d025b12",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.47518591986667"
       ]
      },
      "execution_count": 43,
@@ -2405,19 +2428,21 @@
     }
    ],
    "source": [
-    "metrics.mean_absolute_error(y_pred,y_test)"
+    "#Calculating mean squared error for efficiency of model\n",
+    "\n",
+    "metrics.mean_squared_error(y_test,y_pred)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "470a840b",
+   "id": "cc1da431",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.800586962000002"
+       "0.8284267028304255"
       ]
      },
      "execution_count": 44,
@@ -2426,21 +2451,21 @@
     }
    ],
    "source": [
-    "metrics.mean_squared_error(y_pred,y_test)"
+    "metrics.r2_score(y_test,y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82605172",
+   "metadata": {},
+   "source": [
+    "##### R2 score is 0.815 Thus My model is 81.5% efficient"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee264e17",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b16e796",
+   "id": "18a13b7f",
    "metadata": {},
    "outputs": [],
    "source": []
